# JASM

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  .pylintrc  .yamllint  InstructionProcessor.py  LICENSE  README.md  TODO_JASM_19_02_24.md  Yaml2Regex.py  YamlHandler.py  YamlRegexCreator.py  binary_parser_no_pyparsing.py  capture_group_bug_diagnostic.md  dev-requirements.txt  global_definitions.py  lenovo_file_pyparsed.txt  logging_config.py  main.py  match.py  mypy.ini  parse_arguments.py  parsing_asm_manual_regex.py  performance.py  performance_lenovo2.py  performance_moonbounce.py  populate_unit_test_structure.sh  pyproject.toml  read_yaml.py  remove_all_directories_recursively.sh  run_arx_over_binary_tests.sh  run_coverage.sh  run_moonbounce_regex_matcher_over_dir.sh  run_mypy.sh  run_pylint.sh  run_regex.py  run_tests.sh  yaml2regex.py  yaml_handler_class.py
.github/: workflows
TODO/: TODO_JASM_22_01_24.md  TODO_TESIS.md  TODO_asm  todo_asm2
assembly/: generate_big_asm.sh  ls_head_10_simple.s
benchmark_baseline/: 0014_baseline.json  baseline.json
calculate_ca_and_ce_metrics/: generate_table.py  measure_ca_and_ce.py  measure_ca_and_ce2.py  measure_ca_and_ce5.py  results_measure_ca_and_ce.json  results_measure_ca_and_ce2.json
design/: classes_myproj.puml  diagram_class.puml  packages_myproj.puml  sequence_diagram.puml  sequence_diagram_macro_design.puml  sequence_diagram_main_module.puml  sequence_diagram_match_module.puml  sequence_diagram_match_module_only.puml  sequence_diagram_regex_module.puml  sequence_diagram_whole_match_module.puml
dissasembly/: dessasembly.py  disasembly.py
dissasembly_pyparsing/: binary_data.s  binary_parser_chatgpt.py  binary_parser_perplexity.py
old/: binary_parser.py
parsing/: .old_binary_parser.py  binary_parser.py  pyparsing_binary_rules.py
pyparsing/: binary_data.s  binary_parser.py  ls_asm.s  run_regex.py  string_to_analyze_generator.py
src/: command_definition.py  consumer.py  global_definitions.py  logging_config.py  match.py  (+4 more)
(+350 files in other folders)
