[tool.poetry]
name = "JASM"
version = "1.0.14"
description = "JASM - Assembly Regex Generator"
authors = ["Julian Merida <julianmr97@gmail.com>"]
readme = "README.md"
packages = [{ include = "jasm", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
regex = "^2023.12.25"
argcomplete = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
