[tool.poetry]
name = "JASM"
version = "1.0.15"
description = "JASM - Assembly Regex Generator"
authors = ["Julian Merida <julianmr97@gmail.com>"]
readme = "README.md"
packages = [{ include = "jasm", from = "src" }]


[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
regex = "^2023.12.25"
argcomplete = "^3.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"
pytest-xdist = "^3.6.1"
pytest-benchmark = "^4.0.0"
pytest-fail-slow = "^0.6.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
